--- a/README
+++ b/README
@@ -55,6 +55,12 @@ Notes
     run iphonesimlator..
 
     [js code]
-      var socket = new io.Socket('169.254.10.100', { port: 8080 });
-      socket.connect()..
-.
+      var socket = io.connect('169.254.10.100:8080');
+      socket.send('hello world!!');
+      socket.on('message', function (message){
+        ...
+      });
+
+  * android client:
+    add property tiapp.xml
+    <property name="ti.android.threadstacksize" type="int">32768</property>
