--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 socket.io-titanium
 ------------------
 
-socket.io@0.8.7(socket.io-client@0.8.7)
-TiMob SDK 1.8.0.1
+socket.io@0.9.1-1(socket.io-client@0.9.1-1)
+TiMob SDK 1.8.1
 
 How to use
 ==========
